# exploding-kittens

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py
backend/app/core/: config.py
backend/app/modules/game/: __init__.py  errors.py  models.py  registry.py  service.py  turn_service.py
backend/app/modules/room/: __init__.py  constants.py  errors.py  mappers.py  models.py  registry.py  service.py
backend/app/modules/session/: __init__.py  errors.py  models.py  registry.py  service.py
backend/app/realtime/: __init__.py  game_events.py  server.py
backend/app/schemas/: __init__.py  enums.py  requests.py  responses.py
backend/tests/: test_game_setup.py  test_health.py  test_room_models.py  test_room_registry.py  test_room_service.py  test_session_service.py  test_socket_room_session_flow.py  test_socket_validation.py  test_turn_service.py
plan/: functional-spec.md  game-design.md  game-engine-spec.md  implementation-plan.md  plan.md  technical-design.md
plan/detail-implementation/: 12-explosion-defuse-elimination-endgame.md  13-socket-handler.md  14-socket-handler-game-action.md  4-room-model.md  5-player-session-socket-binding.md  6-room-method-precondition.md  7-deck-builder-game-setup.md  8-turn-lifecycle.md  9-skip-attack.md  issue-3.md
shared/contracts/: enums.ts  event-names.ts  index.ts  requests.ts  responses.ts
